autoload de módulos - Slim intermediário

--- a/slim-skeleton/templates/users/index.phtml
+++ b/slim-skeleton/templates/users/index.phtml
@@ -47,6 +47,8 @@
         <h1>Slim</h1>
         <div>a microframework for PHP</div>
 
+        <h2>Bem vindo <?php echo $_SESSION['user']['name']; ?></h2>
+
         <table>
             <thead>
                 <tr>
